--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 
 
-    <section class="relative bg-gray-900 h-screen">
+    <section id="home" class="relative bg-gray-900 h-screen">
         <div class="absolute inset-0">
             <img class="w-full h-full object-cover opacity-50 bg-black-900" src="img/hero-img.jpg" alt="">
             <div class="absolute inset-0 bg-gray-900 opacity-20"></div>
@@ -187,7 +187,7 @@
         </div>
     </section>
 
-    <section class="py-12 bg-gray-100 relative flex items-center justify-center">
+    <section id="Category" class="py-12 bg-gray-100 relative flex items-center justify-center">
         <div class="container mx-auto px-4">
             <h2 class="text-2xl font-bold mb-4 text-center">Choose Category</h2>
             <div class="owl-carousel owl-theme">
@@ -257,7 +257,7 @@
     </section>
 
 
-    <section class="py-12 bg-gray-100 relative">
+    <section id="Services" class="py-12 bg-gray-100 relative">
         <div class="container mx-auto px-4">
             <h2 class="text-2xl font-bold mb-4 text-center">Services Offered</h2>
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
@@ -368,6 +368,7 @@
             </div>
         </div>
     </section>
+
     <section class="py-4 bg-gray-100 text-center">
         <div class="container mx-auto">
             <div class="flex justify-center items-center space-x-4">
@@ -380,6 +381,8 @@
             </div>
         </div>
     </section>
+
+    
     <section class="relative bg-cover h-screen" style="background-image: url('img/hero-img.jpg');">
         <div class="absolute inset-0 flex flex-col items-center justify-center bg-black bg-opacity-75">
             <h1 class="text-3xl font-extrabold tracking-tight text-white sm:text-4xl md:text-5xl mb-6">
