--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TRAVELBLOG</title>
-    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+    <title>DigiPath Solutions</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.1.4/dist/tailwind.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet"
@@ -53,8 +55,9 @@
         <div class="max-w-7xl mx-auto px-4 flex justify-between items-center">
             <div class="flex items-center">
                 <a href="#" class="text-xl font-bold mr-4">
-                    <span class="text-green-500">TRAVEL</span>
-                    <span class="text-white">BLOG</span>
+                    <span class="text-blue-400">DigiPath</span>
+                    <span class="text-white">Solutions</span>
+
                 </a>
             </div>
 
@@ -159,26 +162,22 @@
 
     <section id="home" class="relative bg-gray-900 h-screen">
         <div class="absolute inset-0">
-            <img class="w-full h-full object-cover opacity-50 bg-black-900" src="img/hero-img.jpg" alt="">
+            <img class="w-full h-full object-cover opacity-50 bg-black-900" src="img/heroimg.gif" alt="">
             <div class="absolute inset-0 bg-gray-900 opacity-20"></div>
         </div>
         <div class="absolute inset-0 flex flex-col items-center justify-center">
             <h1 class="text-3xl font-extrabold tracking-tight text-white sm:text-4xl md:text-5xl mb-6">
-                <span class="block xl:inline">Where will you go next?</span>
+                <span class="block xl:inline">DigiPath Solutions</span>
             </h1>
             <div class="max-w-lg w-full flex">
                 <div class="relative w-full">
-                    <span class="absolute inset-y-0 left-0 pl-3 flex items-center z-10">
+                    <!-- <span class="absolute inset-y-0 left-0 pl-3 flex items-center z-10">
                         <i class="fas fa-search text-gray-400"></i>
-                    </span>
-                    <input type="text" placeholder="Search"
-                        class="w-full pl-10 pr-4 py-3 rounded-full shadow-sm focus:ring-red-600 focus:border-red-600 bg-white-800 text-white">
+                    </span> -->
+                    <!-- <input type="text" placeholder="Search"
+                        class="w-full pl-10 pr-4 py-3 rounded-full shadow-sm focus:ring-red-600 focus:border-red-600 bg-white-800 text-white"> -->
                     <p class="font-normal tracking-tight text-white sm:text-base md:text-lg text-center mb-6 mx-4">
-                        <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        In sed et donec purus viverra. Sit justo velit, eu sed
-                        sollicitudin tempus, risus. Sed sit elit mauris adipiscing. L
-                        obortis pellentesque nulla accumsan id urna, ullamcorper
-                        gravida varius. Massa mauris, cursus orci magna non enim fames et sed.
+                        <br>At <strong> DigiPath</strong>, we provide cutting-edge IT management systems designed to elevate your business operations without breaking the bank. Our affordable solutions are tailored to meet the unique needs of your business, ensuring efficiency and excellence. Join us in our mission to empower education and foster future IT talents.
                     </p>
 
                 </div>
